i think all the btns that show divs have been updated so they toggle instead of a single assignment

--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -26,7 +26,7 @@
 
         <div id="buttons">
             <button class="iconBtn" style="visibility: @vis" @onclick="@(() => albumsVis = "visible")" title="Add Selected to Album"><span class="material-icons-outlined">library_add</span></button>
-            <button class="iconBtn" style="visibility: @vis" title="Add or Remove Stars From Selected" @onclick="@(() => starChoiceVis = "visible")"><span class="material-icons-outlined">star_outline</span></button>
+            <button class="iconBtn" style="visibility: @vis" title="Add or Remove Stars From Selected" @onclick="@(() => F.VisToggle(ref starChoiceVis))"><span class="material-icons-outlined">star_outline</span></button>
             <button class="iconBtn" style="visibility: @vis" @onclick="@RemoveBtnClick" title="Remove Selected"><span class="material-icons-outlined">remove</span></button>
             <button class="iconBtn" style="visibility: @vis" @onclick="@DeleteSelectedBtnClick" title="Delete Selected"><svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
             <button class="iconBtn" @onclick="@(() => F.VisToggle(ref sortDivVis))" title="More Options"><span class="material-icons-outlined">more_vert</span></button>
@@ -48,8 +48,8 @@
     
     <KeyboardShortcuts
         CtrlD="@(() => { DeleteSelectedBtnClick(); StateHasChanged(); })"
-        AltA="@(() => { albumsVis = "visible"; StateHasChanged(); })"
-        AltS="@(() => { starChoiceVis = "visible"; StateHasChanged(); })" />
+        AltA="@(() => { F.VisToggle(ref albumsVis); StateHasChanged(); })"
+        AltS="@(() => { F.VisToggle(ref starChoiceVis); StateHasChanged(); })" />
 
     if (albumMedia.Count == 0)
     {
