--- a/PSS/wwwroot/css/UploadApply.css
+++ b/PSS/wwwroot/css/UploadApply.css
@@ -88,8 +88,8 @@ header > #statusSpan {
     margin-left: 4px;
 }
 
-#mainDiv > .itemDiv > img {
-    width: 6%;
+#mainDiv > .itemDiv > img, #mainDiv > .itemDiv > video {
+    width: 4%;
     vertical-align: middle; /*https://stackoverflow.com/a/489394*/
 }
 
