--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -20,4 +20,7 @@
     // var fromDB = reader.GetString(0);
     //<img alt="mmmmmm" src=@("data:image/jpg;base64," + fromDB)>
     // C.Close();
+    
+    <img style="width: 10%; margin-left: 50%;" src="pss_upload/output_image.jpg" alt="hi"/>
+    UploadApply.GenerateThumbnail();
 }
