--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -22,5 +22,5 @@
     // C.Close();
     
     <img style="width: 10%; margin-left: 50%;" src="pss_upload/output_image.jpg" alt="hi"/>
-    UploadApply.GenerateThumbnail();
+    UploadApply.GenerateThumbnail("C:/Users/Elliott/Documents/GitHub/Photos-Storage-Server/PSS/wwwroot/pss_upload/Photos-001/VID_20211230_075557.mp4");
 }
