--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -21,11 +21,15 @@
     //<img alt="mmmmmm" src=@("data:image/jpg;base64," + fromDB)>
     // C.Close();
     
-    <img style="width: 10%; margin-left: 50%;" src=@("data:image/jpg;base64," + yes) alt="hi"/>;
+    <img style="width: 10%; margin-left: 40%;" src=@("data:image/jpg;base64," + yes) alt="hi"/>;
+    <img style="width: 10%; margin-left: 10%;" src=@("data:image/jpg;base64," + yes2) alt="hi"/>;
+    <img style="width: 10%; margin-left: 10%;" src=@("data:image/jpg;base64," + yes3) alt="hi"/>;
 }
 
 @code{
 
     private static readonly string yes = UploadApply.GenerateThumbnail("C:/Users/Elliott/Documents/GitHub/Photos-Storage-Server/PSS/wwwroot/pss_upload/VID_20220108_122130.mp4");
+    private static readonly string yes2 = UploadApply.GenerateThumbnail("C:/Users/Elliott/Documents/GitHub/Photos-Storage-Server/PSS/wwwroot/pss_upload/VID_20211230_075610.mp4");
+    private static readonly string yes3 = UploadApply.GenerateThumbnail("C:/Users/Elliott/Documents/GitHub/Photos-Storage-Server/PSS/wwwroot/pss_upload/VID_20211230_092341.mp4");
 
 }
