--- a/PSS/Pages/UploadApply.razor
+++ b/PSS/Pages/UploadApply.razor
@@ -225,28 +225,28 @@
     //Get if an item is already on the server (already in your library).
     private static bool ItemExists(string filename, DateTime dateTaken) => File.Exists(Path.Combine(GenerateSortedDir(dateTaken), Path.GetFileName(filename)));
 
-    ///Given the final path where the video file will end up on the server, generate a temporary compressed thumbnail file for it,
+    ///Given the full final path where the video file will end up on the server, generate a temporary compressed thumbnail file for it,
     ///turn that into its base64 representation, and return the base64 string.
-    //TODO: this func is still wip
     public static string GenerateThumbnail(string videoFullFinalPath)
     {
         //First create the thumbnail from the first frame of the video file.
         //https://stackoverflow.com/questions/4425413/how-to-extract-the-1st-frame-and-restore-as-an-image-with-ffmpeg/4425466
         string thumbnailFullPath = Path.Combine(Path.GetDirectoryName(videoFullFinalPath)!, Path.GetFileNameWithoutExtension(videoFullFinalPath) + ".jpg");
         
+        //Something to note is this command produces a bunch of stupid output and also says it failed but it still produces the thumbnail so... ¯\_(ツ)_/¯ 
         ProcessStartInfo ffprobeInfo = new()
         {
             CreateNoWindow = true,
             FileName = "ffmpeg",
             Arguments = $"-i \"{videoFullFinalPath}\" -vf \"select=eq(n\\,0)\" -vf scale=320:-2 -q:v 25 \"{thumbnailFullPath}\""
         };
-        Process ffprobeProcess = Process.Start(ffprobeInfo);
-        //ffprobeProcess!.WaitForExit(); //Not sure why but this pretty much caused the server to lock up.
+        Process.Start(ffprobeInfo);
+        //Process ffprobeProcess = Process.Start(ffprobeInfo);
+        //ffprobeProcess.WaitForExit(); //Not sure why but this pretty much caused the server to freeze and lock up.
 
         byte[] bytes = File.ReadAllBytes(thumbnailFullPath);
 
         //Then delete the thumbnail as it's no longer required.
-        //TODO: these don't seem to get deleted???????? Create a tmp folder for pss and write these things there.
         File.Delete(thumbnailFullPath);
         
         //Then convert that file's bytes into its base64 equivalent. This is stored in the DB as the thumbnail (no actual file required).
